--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: 'Update schedule'
 
 on:
   schedule:
-    - cron: '0 7 */3 * *'
+    - cron: '0 7,19 * * *'
   workflow_dispatch:
     branches:
       - master
